laid out header

--- a/index.html
+++ b/index.html
@@ -6,10 +6,44 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/app.min.css">
 </head>
 <body>
-    Привет мир!
-    Как дела?
+    <header>
+        <div class="container">
+            <div class="header_menu">
+                <div class="header_logo">
+                    <img src="images/header/logo.png" alt="logo">
+                </div>
+                <div class="header_text">
+                    <span>Официальный представитель</span>
+                    <p>Garmin, Polar, Suunto</p>
+                </div>
+                <div class="header_btn">
+                    <a href="tel:+74999228974" class="header_phone">+7 (499) 922-89-74</a>
+                    <button>заказать звонок</button>
+                </div>
+            </div>
+            <div class="header_promo">
+                <h1 class="promo">Подбор пульсометра</h1>
+                <p class="sab-promo">с учётом Вашего уровня подготовки</p>
+            </div>
+            <div class="header_icons">
+                <div class="header_items"><img src="images/header/timer.png" alt="timer">
+                    <p>Время подбора: 10 минут</p>
+                </div>
+                <div class="header_items"><img src="images/header/cart.png" alt="cart">
+                    <p>Бесплатная доставка</p></div>
+                <div class="header_items"><img src="images/header/messages.png" alt="messages">
+                    <p>Ответим на все вопросы</p>
+                </div>
+            </div>
+            <div class="header_sub-btn">
+                <button>заказать консультацию</button>
+                <p>или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a></p>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
