laid out the section of advantages

--- a/index.html
+++ b/index.html
@@ -45,5 +45,29 @@
             </div>
         </div>
     </header>
+
+    <section class="advantages">
+        <div class="container">
+            <h2>НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div class="advantages_block">
+                <div class="advantages_items">
+                    <img src="images/section_%20advantages/cup.png" alt="cup">
+                    <div class="advantages_promo">Делимся опытом</div>
+                    <div class="advantages_text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                </div>
+                <div class="advantages_items">
+                    <img src="images/section_%20advantages/heart.png" alt="heart">
+                    <div class="advantages_promo">Заботимся о здоровье</div>
+                    <div class="advantages_text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                </div>
+                <div class="advantages_items">
+                    <img src="images/section_%20advantages/shoe.png" alt="shoe">
+                    <div class="advantages_promo">Учим бегать</div>
+                    <div class="advantages_text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span>I LOVE RUNNING.</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
