made up a section with comments

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>RunSmart</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/app.min.css">
 </head>
@@ -69,5 +69,40 @@
         </div>
     </section>
 
+    <section class="reviews">
+        <div class="container">
+            <h2>отзывы клиентов</h2>
+            <div class="reviews_block">
+                <div class="reviews_items">
+                    <img src="images/section_%20reviews/photo_1.png" alt="photo">
+                    <div class="reviews_items-card">
+                        <div class="reviews_items-name irina-card">Ирина Иванченко <span>2 полумарафона</span></div>
+                        <div class="reviews_items-text">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности. Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br><br>
+                            Новые цели - новый гаджет!<br><br>
+                            Спасибо, <span>RunSmart</span>! </div>
+                    </div>
+                </div>
+                <div class="reviews_items">
+                    <img src="images/section_%20reviews/photo_2.png" alt="photo">
+                    <div class="reviews_items-card">
+                        <div class="reviews_items-name">Иван Сёмочкин <span>1 полумарафон</span></div>
+                        <div class="reviews_items-text">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.
+                            <br>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.
+                            <br><br>
+                            С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
+                    </div>
+                    </div>
+                <div class="reviews_items">
+                    <img src="images/section_%20reviews/photo_3.png" alt="photo">
+                    <div class="reviews_items-card">
+                        <div class="reviews_items-name">Юлия Дашкина <span>2 полумарафона</span></div>
+                        <div class="reviews_items-text">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+                            <br><br>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!<br><br>
+                            Спасибо!!!</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
