--- a/index.html
+++ b/index.html
@@ -104,5 +104,24 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <div class="footer_block">
+                <div class="footer_address">Москва, Мясницкий проезд, д.3с1</div>
+                <a href="tel:+74999228974">8 (499) 922-89-74</a>
+                <div class="footer_network">
+                    <div class="footer_items">
+                        <img src="images/footer/facebook.svg" alt="facebook">
+                    </div>
+                    <div class="footer_items">
+                        <img src="images/footer/instagram.svg" alt="instagram">
+                    </div>
+                    <div class="footer_items">
+                        <img src="images/footer/pinterest.svg" alt="pinterest">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
