began to typeset the section with the form

--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
         </div>
     </section>
 
+    <section class="form">
+        <div class="container">
+            <div class="form_promo">Получите бесплатную консультацию по подбору пульсометра </div>
+            <div class="form_sub-promo">Просто заполните форму заявки и мы перезвоним вам в течении 10 минут</div>
+            <form action="">
+                <input type="text">
+                <input type="tel">
+                <input type="email">
+                <button>Заказать консультацию</button>
+            </form>
+        </div>
+    </section>
+
     <section class="reviews">
         <div class="container">
             <h2>отзывы клиентов</h2>
