laid out the form

--- a/index.html
+++ b/index.html
@@ -73,10 +73,16 @@
         <div class="container">
             <div class="form_promo">Получите бесплатную консультацию по подбору пульсометра </div>
             <div class="form_sub-promo">Просто заполните форму заявки и мы перезвоним вам в течении 10 минут</div>
-            <form action="">
-                <input type="text">
-                <input type="tel">
-                <input type="email">
+            <form action="" method="get">
+                <label>
+                    <input class="input" type="text" name="username" placeholder="Ваше имя">
+                </label>
+                <label>
+                    <input class="input" type="tel" name="tel" placeholder="Ваш телефон">
+                </label>
+                <label>
+                    <input class="input" type="email" name="email" placeholder="Ваш E-mail">
+                </label>
                 <button>Заказать консультацию</button>
             </form>
         </div>
