made animation and modified the code

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
                 <a href="tel:+74999228974">8 (499) 922-89-74</a>
                 <div class="footer_network">
                     <div class="footer_items">
-                        <img src="images/footer/facebook.svg" alt="facebook">
+                        <a href="#"><img src="images/footer/facebook.svg" alt="facebook"></a>
                     </div>
                     <div class="footer_items">
-                        <img src="images/footer/instagram.svg" alt="instagram">
+                        <a href="#"><img src="images/footer/instagram.svg" alt="instagram"></a>
                     </div>
                     <div class="footer_items">
-                        <img src="images/footer/pinterest.svg" alt="pinterest">
+                        <a href="#"><img src="images/footer/pinterest.svg" alt="pinterest"></a>
                     </div>
                 </div>
             </div>
